Padding did not fix contrast checker on slogan or h1 tag, removed padding and modified header image with scrim layer to fix contrast

--- a/styles/main.css
+++ b/styles/main.css
@@ -18,7 +18,6 @@ h1 {
   color: hsl(29, 86%, 80%);
   font-weight: lighter;
   font-size: 1.6rem;
-  padding-bottom: 100px;
 }
 
 main {
